@@ -1,5 +1,6 @@
 # Generated by roxygen2 (4.1.1): do not edit by hand
 
+S3method(as.Date,decimal)
 S3method(as.binary,phylo)
 S3method(as.data.frame,phylo)
 S3method(fortify,beast)
@@ -16,6 +17,7 @@ export("%<%")
 export("%<+%")
 export("%>%")
 export(.)
+export(Date2decimal)
 export(add_colorbar)
 export(add_legend)
 export(aes)
