@@ -42,7 +42,7 @@ setMethod("plot", signature( x= "raxml"),
                    branch.length = "branch.length",
                    show.tip.label = TRUE,
                    tip.label.size = 4,
-                   tip.label.hjust = -0.1,
+                   tip.label.hjust = 0,
                    position = "branch",
                    annotation = "bootstrap",
                    ndigits = 2,
