@@ -13,7 +13,7 @@
 \usage{
 \S4method{plot}{raxml,ANY}(x, layout = "rectangular",
   branch.length = "branch.length", show.tip.label = TRUE,
-  tip.label.size = 4, tip.label.hjust = -0.1, position = "branch",
+  tip.label.size = 4, tip.label.hjust = 0, position = "branch",
   annotation = "bootstrap", ndigits = 2, annotation.size = 3,
   annotation.color = "black", ...)
 
