@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.1.20
 ------------------------
+ o add mrsd parameter for user to specify 'most recent sampling date' for time tree <2015-09-01, Tue>
+   - remove 'time_scale' parameter.
  o defined 'raxml' class for RAxML bootstrapping analysis result <2015-09-01, Tue>
    + read.raxml, parser function
    + plot, get.tree, get.fields, groupOTU, groupClade, scale_color, gzoom, and show methods
